--- a/assets/css/base.scss
+++ b/assets/css/base.scss
@@ -26,6 +26,7 @@ body {
   font-family: "Noto Sans TC", serif;
   font-size: 16px;
   font-weight: 400;
+  color: var(--secondary-color);
 }
 
 .max-page-width {
