[首頁]服務項目組件

--- a/assets/css/theme.scss
+++ b/assets/css/theme.scss
@@ -11,7 +11,11 @@
   --primary-light-color: #f8eecc;
   --primary-light-hover-color: #f1dd9a;
 
+  --primary-dark-color: #B49060;
+
   --secondary-color: #998e86;
   --secondary-dark-color: #89847f;
+
+  --gray-color: #b1b1b1;
 }
   
