--- a/assets/css/base.scss
+++ b/assets/css/base.scss
@@ -1,5 +1,4 @@
 @use "theme.scss";
-@import url("https://fonts.googleapis.com/css2?family=Noto+Sans+TC:wght@100..900&family=Ubuntu:ital,wght@0,300;0,400;0,500;0,700;1,300;1,400;1,500;1,700&display=swap");
 
 /* 自定義 Scrollbar */
 @mixin scroll-bar-style {
@@ -22,9 +21,14 @@
   @include scroll-bar-style;
 }
 
-body {
-  font-family: "Noto Sans TC", serif;
+html {
   font-size: 16px;
+  @include set-rwd(md) {
+    font-size: 14px;
+  }
+}
+
+body {
   font-weight: 400;
   color: var(--secondary-color);
   letter-spacing: 1px;
