--- a/assets/css/theme.scss
+++ b/assets/css/theme.scss
@@ -7,6 +7,7 @@
   --primary-light-hover-color: #f1dd9a;
 
   --primary-dark-color: #B49060;
+  --primary-dark-hover-color: #FCEED4;
 
   --secondary-color: #998e86;
   --secondary-dark-color: #89847f;
