[預約頁]calendar css RWD

--- a/assets/css/base.scss
+++ b/assets/css/base.scss
@@ -206,4 +206,9 @@ body {
   @include set-rwd(sm) {
     min-width: 100px;
   }
+  @include set-rwd(xs) {
+    .q-date__view {
+      padding: 1rem 0;
+    }
+  }
 }
