--- a/assets/css/base.scss
+++ b/assets/css/base.scss
@@ -1,4 +1,5 @@
 @use "theme.scss";
+@use "transition.scss";
 @import url("https://fonts.googleapis.com/css2?family=Noto+Sans+TC:wght@100..900&family=Ubuntu:ital,wght@0,300;0,400;0,500;0,700;1,300;1,400;1,500;1,700&display=swap");
 
 /* 自定義 Scrollbar */
