--- a/assets/css/base.scss
+++ b/assets/css/base.scss
@@ -136,6 +136,21 @@ body {
   }
 }
 
+.el-select {
+  .q-field__control:hover {
+    transition: border-color 0.36s cubic-bezier(0.4, 0, 0.2, 1);
+    &:before {
+      border-color: var(--primary-color);
+    }
+  }
+}
+.el-select-pupup-content {
+  .options-selected {
+    background-color: var(--secondary-color);
+    color: white;
+  }
+}
+
 .calendar-inline {
   color: var(--secondary-color);
   box-shadow: none;
