--- a/assets/css/base.scss
+++ b/assets/css/base.scss
@@ -136,6 +136,24 @@ body {
   }
 }
 
+.q-field--standard {
+  &:not(.q-select).q-field--labeled .q-field__native {
+    padding-top: 30px; // input
+  }
+  &.q-select.q-field--labeled .q-field__control-container {
+    padding-top: 30px; // select
+  }
+
+  .q-field__control {
+    height: 60px;
+    .q-field__control-container {
+      .q-field__label {
+        font-size: 1.125rem;
+      }
+    }
+  }
+}
+
 .el-select {
   .q-field__control:hover {
     transition: border-color 0.36s cubic-bezier(0.4, 0, 0.2, 1);
