--- a/assets/css/base.scss
+++ b/assets/css/base.scss
@@ -267,6 +267,14 @@ body {
     > div {
       padding: 0 15px;
     }
+    &:first-child {
+      border-top-left-radius: 10px;
+      border-top-right-radius: 10px;
+    }
+    &:last-child {
+      border-bottom-left-radius: 10px;
+      border-bottom-right-radius: 10px;
+    }
   }
   @include set-rwd(md) {
     padding: 0;
@@ -279,6 +287,10 @@ body {
       }
       &:nth-child(odd) {
         background-color: #f5f5f5;
+      }
+      &:nth-child(2) { // header 隱藏
+        border-top-left-radius: 10px;
+        border-top-right-radius: 10px;
       }
     }
   }
